# eefocTUI

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
src/: app.rs  config.rs  console.rs  main.rs
src/events/: input.rs  mod.rs
src/models/: container.rs  metrics.rs  mod.rs
src/services/: docker.rs  mod.rs  network.rs  system.rs
src/ui/: icons.rs  layout.rs  mod.rs  theme.rs
src/ui/views/: docker.rs  help.rs  mod.rs  network.rs  system.rs
